2003-10-04  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b126

	* Reverted to -b122. The -b123 merge was partially botched. :(:(

2003-10-04 John Kirkland  <jpk@bl.org> 1.4.1-cvs-b125

	* Re-centered "add comment" link and added <br><br> between picture
	  and description in view_photo.php.  CVS must have eaten these in
	  the merge somehow.

2003-10-04 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b124

	* No longer require confirmation when changing highlight.

	* Fixed bug where image dimensions didn't display under image.

	* Added align="center" that beckett suggests to inline_imagewrap.inc.

2003-10-04  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b123

	* Merged DEV_1_4_1_skins:	
	  Gallery now supports "skins", which establish the look and feel of
	  the whole site. Coded by JadeDragon, and implemented into the Gallery
	  distribution by John Kirkland.

	* Renamed cs_CZ to cs_CZ.iso in nls.php to get Czech working again. It
	  should probably be renamed to "cs_CZ.iso-8859.2" (?).

	* Fixed issue with new layout scheme to bring some global variables
	  into scope in the included files. (Thanks Joan!)
	
2003-10-03 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b122

	* Fixed bug in offline slideshow.  Identical to 1.3.5-cvs-b18 bug.

	* Removed more warnings.

	* Replaced $GALLERY_BASEDIR/ with ${GALLERY_BASEDIR}

	* Update capture date when refreshing EXIF data.

	* Removed stray pixel from TR.gif for polaroids.

2003-10-02  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b121

	* Fixed validation errors in view_album.php and view_photo.php.

	* Edited language namings in nls.php.

2003-10-03  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b120

	* Bugfix: Available Languages were'nt detected correctly when not
	  in the Config. Wizard

	* Bugfix: Available Languages were not saved correctly in the
	  Config. Wizard

2003-10-03  Jens Tkotz <jens@peino.de> 1.4.1-cvs-b119
