@@ -94,6 +94,13 @@ if (!strcmp($cmd, "remake-thumbnail")) {
 	}
 	//-- this is expected to be loaded in a popup, so dismiss ---
 	dismissAndReload();
+} else if (!strcmp($cmd, "highlight")) {
+	if ($gallery->user->canWriteToAlbum($gallery->album)) {
+		$gallery->album->setHighlight($index);
+		$gallery->album->save();
+	}
+	//-- this is expected to be loaded in a popup, so dismiss ---
+	dismissAndReload();
 } else if (!strcmp($cmd, "new-album")) {
 	if ($gallery->user->canCreateAlbums() ||
 	    $gallery->user->canCreateSubAlbum($gallery->album)) {
