@@ -626,6 +626,7 @@ $gallery->html_wrap['pixelImage'] = $imageDir . "/pixel_trans.gif";
 
 includeHtmlWrap("inline_photo.frame");
 ?>
+<br><br>
 <table border="0" width="<?php echo $mainWidth ?>" cellpadding="0" cellspacing="0">
 <!-- caption -->
 <tr>
@@ -702,7 +703,7 @@ if (is_int($key))
 
 	$dimensions=$photo->getDimensions($full);
 	$table .= "<tr><td valign=top align=right><b>".$automaticFields[$field].":</b></td><td>".
-	$dimensions[0]." x ".$dimensions[1]." (". (int) $photo->getFileSize($full) >> 10 ."k)</td></tr>";
+	$dimensions[0]." x ".$dimensions[1]." (". ((int) $photo->getFileSize($full) >> 10) ."k)</td></tr>";
 	unSet($extra_fields[$key]);
 }
 
